<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        app:title="@string/tab_title_verification_email"
        android:id="@+id/toolbar_verification_email"
        android:layout_height="52dp"
        app:titleTextColor="@color/colorWhile"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorBlue" />

    <TextView
        android:id="@+id/textview_note_confirm_email"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:text="@string/text_textview_note_confirm_email"
        android:layout_below="@id/toolbar_verification_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="5dp"
        android:background="@drawable/custom_border_content_comment"
        android:id="@+id/layout_enter_email"
        android:layout_below="@id/textview_note_confirm_email"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/edittext_email_address"
            android:backgroundTint="@color/colorWhile"
            android:layout_marginLeft="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_edittext_email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/button_savechanges"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhile"
        android:background="@drawable/custom_border_button_enable"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/text_button_confirm_email"
        android:layout_below="@id/layout_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>