<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="horizontal"
    tools:context=".views.register.RegisteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue"
        app:title="@string/tab_title_register"
        app:titleTextColor="@color/colorWhile"></android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_register"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_register"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/layout_name_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/text_textview_attention_register"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/text_textview_attention2_register"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <EditText
                android:inputType="text"
                android:id="@+id/edittext_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/text_edittext_name_register"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp" />


            <Button
                android:id="@+id/button_next_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_backgroud_button_enable_disable"
                android:enabled="false"
                android:text="@string/text_button_next_register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhile"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>