<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="1dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/account_icon"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="56dp" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_textview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_textview_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:textSize="15sp"
                android:text="@string/text_textview_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>