<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.home.tabsetting.changepassword.ChangePassActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_changepass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue"
        app:title="@string/tab_title_changepass"
        app:titleTextColor="@color/colorWhile">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:background="@color/colorGrey"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_changepass"
        android:orientation="vertical">

        <FrameLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_border_content_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.example.appchat.customview.CustomPassword
                android:layout_marginLeft="5dp"
                android:shadowColor="@color/colorWhile"
                android:id="@+id/edittext_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edittext_password_using"
                android:backgroundTint="@color/colorWhile"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_border_content_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.example.appchat.customview.CustomPassword
                android:layout_marginLeft="5dp"
                android:id="@+id/edittext_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edittext_password_new"
                android:backgroundTint="@color/colorWhile"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_border_content_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.appchat.customview.CustomPassword
                android:layout_marginLeft="5dp"
                android:id="@+id/edittext_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edittext_password_reenter"
                android:backgroundTint="@color/colorWhile"
                android:textColorHint="@color/colorBlack"
                android:textSize="15sp" />
        </FrameLayout>


        <Button
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/button_changepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_backgroud_button_enable_disable"
            android:enabled="false"
            android:text="@string/text_button_update_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>